AUTH STRUCTURE MADE AND WORKED OKAY

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 </head>
 <body ng-app="mymodule" ng-controller="myctrl as control">
 
-<button ng-click="login()">login</button>
+<button ng-click="control.login()">login</button>
 </body>
 </html>
