--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 <body ng-app="mymodule" ng-controller="myctrl as control">
 
 <button ng-click="control.login()">login</button>
+
+{{control.name}}
+
+<br/>
+<button ng-click="control.logout();">logout</button>
 </body>
 </html>
